--- a/app/components/LoadingPage.css
+++ b/app/components/LoadingPage.css
@@ -1,29 +1,3 @@
-.loading-box {
-  width: 100%;
-  height: 100%;
-}
-
-.loading-box .box {
-  width: 40%;
-  border: 2px solid white;
-  height: 20px;
-  padding: 2px;
-}
-
-.loading-box .box .line-box {
-  width: 100%;
-  background: rgb(128, 164, 241);
-  height: 12px;
-  animation: loading 3s forwards cubic-bezier(0, 0, 0, 0);
-}
-
-@keyframes loading {
-  0% {
-    width: 0;
-  }
-}
-
-/* ------------------------------------------------------------- */
 div.track,
 div.bar {
   box-sizing: border-box;
@@ -96,3 +70,7 @@ div.bar {
     width: 100%;
   }
 }
+
+/* .loading-body{
+  background-color: rgb(166, 166, 166);
+} */
